add(product.html, product.css): добавлена страница товара со стилизацией без описания

--- a/src/html/product.html
+++ b/src/html/product.html
@@ -95,7 +95,7 @@
               </div>
               <p class="product__availability">Наличие в магазинах</p>
             </div>
-          </div class="product__block">
+          </div>
         </div>
       </section>
     </main>
