add(product.html, product.css): добавлена страница товара со стилизацией без описания

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -101,7 +101,7 @@
                   <h2 class="item-card__title">Дымка для волос Love</h2>
                   <p class="item-card__description">Ваши волосы будут дышать по-новому</p>
                 </div>
-                <p class="item-card__price">10.000₽</p>
+                <p class="item-card__price">10000 руб.</p>
               </div>
             </div>
 
@@ -125,7 +125,7 @@
                   <h2 class="item-card__title">Мюсли Dr. Oetker</h2>
                   <p class="item-card__description">Зарядят бодростью с самого утра</p>
                 </div>
-                <p class="item-card__price">600₽</p>
+                <p class="item-card__price">600 руб.</p>
               </div>
             </div>
 
@@ -150,7 +150,7 @@
                   <p class="item-card__description">С этой сывороткой вы больше не будете задумываться о ежедневном
                     мытье головы</p>
                 </div>
-                <p class="item-card__price">12.700₽</p>
+                <p class="item-card__price">12700 руб.</p>
               </div>
             </div>
 
@@ -174,7 +174,7 @@
                   <h2 class="item-card__title">Витаминно-минеральный комплекс BeBeautiful</h2>
                   <p class="item-card__description">Укрепляют Ваш организм и сдерживают вирусы. Зима близко!</p>
                 </div>
-                <p class="item-card__price">2.000₽</p>
+                <p class="item-card__price">2000 руб.</p>
               </div>
             </div>
 
@@ -198,7 +198,7 @@
                   <h2 class="item-card__title">Столик-подставка для вина 'Романтика'</h2>
                   <p class="item-card__description">Удивите свою вторую половинку маленьким столиком для вина!</p>
                 </div>
-                <p class="item-card__price">2.000₽</p>
+                <p class="item-card__price">2000 руб.</p>
               </div>
             </div>
 
@@ -206,10 +206,6 @@
         </div>
       </section>
     </main>
-
-    <footer class="footer">
-
-    </footer>
 
   </div>
 </body>
