add(product.html, product.css): добавлен блок описания товара

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -82,7 +82,7 @@
           <div class="cards__block">
 
             <div class="cards__block-card item-card">
-              <a class="item-card__link" href="#">
+              <a class="item-card__link" href="product.html">
                 <div class="item-card__image">
                   <object>
                     <a class="item-card__buy-block" href="#">
