--- a/src/html/product.html
+++ b/src/html/product.html
@@ -17,12 +17,12 @@
     <header class="header">
       <div class="header__container">
         <div class="header__logo logo">
-          <a class="logo__link" href="#">KK Shop</a>
+          <a class="logo__link" href="index.html">KK Shop</a>
         </div>
         <nav class="header__nav">
           <ul class="header__list">
             <li class="header__list-item">
-              <a class="header__link" href="#">Каталог товаров</a>
+              <a class="header__link" href="index.html">Каталог товаров</a>
             </li>
             <li class="header__list-item">
               <a class="header__link" href="#">История заказов</a>
@@ -95,6 +95,14 @@
               </div>
               <p class="product__availability">Наличие в магазинах</p>
             </div>
+          </div>
+          <div class="product__bar">
+            <p class="product__bar-title">Описание</p>
+            <div class="product__line"></div>
+          </div>
+          <div class="product__description-block description">
+            <h3 class="description__product-title">Дымка для волос Love</h3>
+            <p class="description__text">Дымка для волос "Love" - это невероятно уникальный продукт, который превратит уход за вашими волосами в настоящий ритуал красоты. Наши ученые и косметологи разработали эту формулу, чтобы предоставить вашим волосам максимальное внимание и уход. "Love" - это не просто средство для стайлинга, это настоящая магия, которая преображает волосы в мгновение ока.</p>
           </div>
         </div>
       </section>
