add(cart.html, cart.css): добавлена кнопка серого цвета для возможности вернуться назад

--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -84,6 +84,11 @@
                 Оформить заказ
               </p>
             </button>
+            <button class="cart__button-back button button--gray">
+              <p class="cart__button-text">
+                Вернуться назад
+              </p>
+            </button>
           </div>
         </div>
       </section>
