--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -84,11 +84,11 @@
                 Оформить заказ
               </p>
             </button>
-            <button class="cart__button-back button button--gray">
+            <a class="cart__button-back button button--gray" href="index.html">
               <p class="cart__button-text">
                 Вернуться назад
               </p>
-            </button>
+            </a>
           </div>
         </div>
       </section>
