--- a/src/html/order.html
+++ b/src/html/order.html
@@ -45,7 +45,7 @@
               <p class="order__receipt-text">К оплате</p>
               <p class="order__price">22700 руб</p>
             </div>
-            <button class="order__button-back button button--gray">Вернуться назад</button>
+            <a class="order__button-back button button--gray" href="profile.html#orders-block">Вернуться назад</a>
           </div>
         </div>
       </section>
