update(product.html, product.css): добавлено название магазина перед ценником

--- a/src/html/product.html
+++ b/src/html/product.html
@@ -73,6 +73,7 @@
               <h2 class="product__name"><span>Дымка</span> для волос Love</h2>
             </div>
             <div class="product__buy-block">
+              <h2 class="product__store">Scent Haven</h2>
               <h3 class="product__price">10000 руб</h3>
               <div class="product__buttons">
                 <button class="product__add button">Добавить в корзину</button>
