add(profile.php, logout.php): сделана динамическая подстановка пользовательской аватарки и имени с фамилией; добавлена возможность выхода из аккаунта; добавлена стандартная картинка пользователя, если он не загрузил свою

--- a/src/html/order.html
+++ b/src/html/order.html
@@ -45,7 +45,7 @@
               <p class="order__receipt-text">К оплате</p>
               <p class="order__price">22700 руб</p>
             </div>
-            <a class="order__button-back button button--gray" href="profile.html#orders-block">Вернуться назад</a>
+            <a class="order__button-back button button--gray" href="#">Вернуться назад</a>
           </div>
         </div>
       </section>
