add(addOrder.php, pop-up.js): добавлен поп-ап при успешном оформлении заказа; добавлена возможность делать заказ с добавлением в базу данных

--- a/src/html/order.html
+++ b/src/html/order.html
@@ -27,7 +27,10 @@
                   <div class="order__image">
                     <img src="../assets/images/cards/card-item-1.png" alt="Картинка товара">
                   </div>
-                  <h3 class="order__item-name">Дымка для волос Love</h3>
+                  <div class="order__item-info">
+                    <h3 class="order__item-name">Дымка для волос Love</h3>
+                    <p class="order__item-quantity">x1</p>
+                  </div>
                   <p class="order__item-price">10000 руб</p>
                 </a>
               </li>
@@ -36,7 +39,10 @@
                   <div class="order__image">
                     <img src="../assets/images/cards/card-item-3.png" alt="Картинка товара">
                   </div>
-                  <h3 class="order__item-name">Сыворотка минеральная для ухода за волосами</h3>
+                  <div class="order__item-info">
+                    <h3 class="order__item-name">Сыворотка минеральная для ухода за волосами</h3>
+                    <p class="order__item-quantity">x2</p>
+                  </div>
                   <p class="order__item-price">12700 руб</p>
                 </a>
               </li>
